<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.BasketActivity">

    <ListView
        android:id="@+id/dishListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radioGroup"
        android:headerDividersEnabled="true">

    </ListView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/united_cost"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping"
            android:id="@+id/radioButtonShipping"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_table"
            android:id="@+id/radioButtonTable" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/united_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/button_checkout">

        <TextView
            android:text="@string/total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/textViewCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:gravity="end"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_checkout"
        android:text="@string/checkout_button"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        style="@style/greenButton"/>

</RelativeLayout>